interface Observation {
  phenomenonTime: string;
  resultTime: string;
  result: number;
  "Datastream@iot.navigationLink": string;
  "FeatureOfInterest@iot.navigationLink": string;
  "@iot.id": string;
  "@iot.selfLink": string;
}
